tests/encaps/encaps.exp
encaps.js:3
  3: var s1 = `l${a.x}r`; // error: no prop x in A
                    ^ property `x`. Property not found in
  3: var s1 = `l${a.x}r`; // error: no prop x in A
                  ^ A

encaps.js:9
  9: var s2 = tag `l${42}r`;
              ^^^^^^^^^^^^^ encaps tag
  6:     var x:number = strings[0]; // error: string ~> number
                        ^^^^^^^^^^ string. This type is incompatible with
  6:     var x:number = strings[0]; // error: string ~> number
               ^^^^^^ number

encaps.js:16
 16: (s3.foo: number); // error: string ~> number
      ^^^^^^ string. This type is incompatible with
 16: (s3.foo: number); // error: string ~> number
              ^^^^^^ number


Found 3 errors
